--- a/style.css
+++ b/style.css
@@ -8,38 +8,29 @@ body{
 }
 nav{
     width: 100%;
-    border: 2px solid green;
     display: flex;
     background: rgb(24,119,242);
 }
 .logo_lines{
     display: flex;
     width: 60%;
-    border: 2px solid red;
 
 }
 .logo{
-    /* float: left; */
-    /* width: 100%; */
-    border: 2px solid blue;
     font-size: 30px;
-    /* color: rgb(24,119,242); */
     color: white;
     font-weight: 900;
-    /* padding-bottom: 7px; */
     padding-left: 10px;
 }
 .menu{
-    /* float: right; */
     width: 40%;
     display: flex;
     justify-content: space-around;
-    border: 2px solid salmon;
     align-items: center;
     color: white;
 }
 .horizon{
-    /* display: none; */
+    display: none;
 }
 .horizon hr{
     color: white;
@@ -62,34 +53,43 @@ nav{
     nav{
         flex-direction: column;
     }
+    .logo_lines{
+        width: 100%;
+    }
     .logo{
-        width: 100%;
+        width: 90%;
     }
-    .menu{
-        width: 100%;
-        text-align: center;
-    }
+    
     .links{
-        /* display: none; */
         display: block;
         text-align: center;
-        border: 1px solid yellow;
     }
     .horizon{
         display: block;
-        margin-right: 5px;
-        padding-right: 10px;
+        font-size: 30px;
+        color: white;
+        padding: 0px 4px;
     }
     .menu{
+        position: absolute;
         display: block;
-        text-align: right;
-        justify-content: end;
+        top: -72px;
+        z-index: -1;
+        transition: all .9s ease-in-out;
+        width: -10%;
+    }
+    .display{
+        width: 100%;
+        text-align: center;
+        top: 40px;
+        background: rgb(24,119,242);
+    }
+    .links{
+        border: 0.5px solid gainsboro;
     }
 
     
 }
-
-
 
 
 
@@ -120,11 +120,11 @@ nav{
     width: 60%;
     margin: 200px 0px;
     margin-left: 40px;
-    border: 2px solid green;
+    /* border: 2px solid green; */
 }
 .sub_left{
     width: 80%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     margin: 0px auto;
     /* background-color: white; */
 }
@@ -142,13 +142,13 @@ nav{
 .right{
     /* display: flex; */
     width: 40%;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     text-align: center;
 }
 
 form{
     
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     height: 300px;
     padding: 8px;
     display: flex;
@@ -177,7 +177,7 @@ form #login{
     margin-top: 6px;
     margin-bottom: 6px;
     border-radius: 3px;
-    border: 2px solid yellowgreen;
+    /* border: 2px solid yellowgreen; */
     padding: 7px 4px;
     background-color: rgb(24,119,242);
     color: white;
@@ -205,3 +205,34 @@ form h3{
     border-radius: 3px;
     font-weight: 600;
 }
+
+
+
+/* Wrapper Media Screen */
+@media screen and (max-width : 700px) {
+    .wrapper{
+        flex-direction: column;
+        width: 100%;
+    }
+    .left{
+        width: 100%;
+        /* height: 400px; */
+        margin: 150px auto;
+        /* border: 1px solid black; */
+    }
+    .right{
+        width: 100%;
+        /* border: 1px solid green; */
+        margin: 0px auto;
+        margin-top: -150px;
+        padding-bottom: 20px;
+    }
+    .top{
+        margin-top: -65px;
+    }
+
+    
+}
+
+
+
